# BambuMate

.github/workflows/: build.yml
src/: app.rs  commands.rs  theme.rs
src-tauri/: Cargo.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/analyzer/: image_prep.rs  prompts.rs  vision.rs
src-tauri/src/commands/: analyzer.rs  batch.rs  config.rs  health.rs  history.rs  keychain.rs  launcher.rs  mod.rs  models.rs  profile.rs  scraper.rs  stl_bridge.rs  updater.rs
src-tauri/src/history/: store.rs
src-tauri/src/mapper/: engine.rs  rules.rs
src-tauri/src/profile/: generator.rs  mod.rs  paths.rs  registry.rs  writer.rs
src-tauri/src/scraper/: cache.rs  catalog.rs  extraction.rs  html_extractor.rs  http_client.rs  mod.rs  prompts.rs  validation.rs  web_search.rs
src-tauri/src/scraper/adapters/: bambu.rs  creality.rs  elegoo.rs  esun.rs  hatchbox.rs  overture.rs  polymaker.rs  prusament.rs  spoolscout.rs  sunlu.rs
src-tauri/tests/: paths_tests.rs  profile_tests.rs
src/components/: api_key_form.rs  branding.rs  change_preview.rs  defect_report.rs  mod.rs  searchable_select.rs  settings_merge.rs  sidebar.rs  specs_editor.rs  stl_indicator.rs
src/pages/: about.rs  batch_generate.rs  filament_search.css  filament_search.rs  health.rs  home.rs  mod.rs  print_analysis.rs  profile_diff.rs  settings.rs  setup_wizard.rs
style/: main.css
