[package]
name = "bambumate-tauri"
version = "0.1.0"
edition = "2021"
description = "BambuMate Tauri backend"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
keyring = { version = "3.6", features = ["apple-native", "windows-native"] }
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "6.0"
reqwest = { version = "0.12", features = ["json"] }
walkdir = "2.5"
tempfile = "3.24"
scraper = "0.18"
html2text = "0.16"
texting_robots = "0.2"
rusqlite = { version = "0.38", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
url = "2.5"
tokio = { version = "1", features = ["time"] }
rand = "0.9"
urlencoding = "2.1"
toml = "0.8"
image = "0.25"
base64 = "0.22"
notify = "7"

[build-dependencies]
tauri-build = { version = "2", features = [] }
